--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       registry: index.docker.io
       sleep: "10"
       tagname: ci
-      user: dgonzalo-sgt
+      user: dgonzalosgt
     runs-on: ubuntu-18.04
     steps:
       - name: checkout
