--- a/etc/kubernetes/manifests/rc.yaml
+++ b/etc/kubernetes/manifests/rc.yaml
@@ -1,18 +1,43 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: rc
+  name: rc-latest
+  resourceVersion:
+  selflink: 
+  uid: 
+  managedfield: []
+  # namespace: dgonzalo-sgt Lo quitamos porque asi no falla al importarlo desde otro proyecto.
 spec:
   replicas: 2
   selector:
     app: santander-phpinfo
   template:
     metadata:
+    #  name: hello-openshift  Este nombre lo elige de forma aleatoria. No vale.
       labels:
         app: santander-phpinfo
+      creationTimestamp: null
     spec:
       containers:
         - name: php
-          image: index.docker.io/dgonzalosgt/santander-phpinfo:latest
+          image: 'index.docker.io/dgonzalosgt/santander-phpinfo:latest'
           ports:
             - containerPort: 8080
+              protocol: TCP
+          env:
+            - name: nombre_alumno
+              value: dgonzalo-sgt
+          resources:  # Si no lo configuramos nos pueden machacar el contenedor
+            limits:  # Buena practica poner limit = request para evitar overcommit. 
+              cpu: 40m
+              memory: 40M
+            requests:  # Es lo mínimo con lo que arranca el contenedor
+              cpu: 20m
+              memory: 20M
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          imagePullPolicy: Always
+      restartPolicy: Always  # Afecta al POD
+      securityContext: {}
+      schedulerName: default-scheduler
+status: {}
