--- a/etc/kubernetes/manifests/rc.yaml
+++ b/etc/kubernetes/manifests/rc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-  name: rc-latest
+  name: rc-v1.0.0
   resourceVersion:
   selflink: 
   uid: 
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: php
-          image: 'index.docker.io/dgonzalosgt/santander-phpinfo:latest'
+          image: 'index.docker.io/dgonzalosgt/santander-phpinfo:release-1.0.0'
           ports:
             - containerPort: 8080
               protocol: TCP
